# atur_projections

./: .gitignore  README.md  basins.html  ensemble.html  gcm.html  index.html  main.py  pyproject.toml  styles.css
GW_SubBasins/: GW_SubBasins.dbf  GW_SubBasins.sbn  GW_SubBasins.shp  GW_SubBasins.shp.xml  GW_SubBasins.shx
docs/: styles.css
results/: ensemble_prec_delta_summary.csv  ensemble_t2_delta_summary.csv
results/access-cm2_r5i1p1f1/: prec_delta.csv  t2_delta.csv
results/canesm5_r1i1p2f1/: prec_delta.csv  t2_delta.csv
results/cesm2_r11i1p1f1/: prec_delta.csv  t2_delta.csv
results/cnrm-esm2-1_r1i1p1f2/: prec_delta.csv  t2_delta.csv
results/ec-earth3-veg_r1i1p1f1/: prec_delta.csv  t2_delta.csv
results/ec-earth3_r1i1p1f1/: prec_delta.csv  t2_delta.csv
results/fgoals-g3_r1i1p1f1/: prec_delta.csv  t2_delta.csv
results/giss-e2-1-g_r1i1p1f2/: prec_delta.csv  t2_delta.csv
results/miroc6_r1i1p1f1/: prec_delta.csv  t2_delta.csv
results/mpi-esm1-2-hr_r3i1p1f1/: prec_delta.csv  t2_delta.csv
results/mpi-esm1-2-hr_r7i1p1f1/: prec_delta.csv  t2_delta.csv
results/mpi-esm1-2-lr_r7i1p1f1/: prec_delta.csv  t2_delta.csv
results/noresm2-mm_r1i1p1f1/: prec_delta.csv  t2_delta.csv
results/taiesm1_r1i1p1f1/: prec_delta.csv  t2_delta.csv
src/: catalog.py  climate.py  grid.py  output.py  worker.py
